--- a/skiworld-Client/src/main/resources/fxml/AddProduct.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AddProduct.fxml
@@ -3,18 +3,38 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane minHeight="300.0" minWidth="700.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddProductController">
    <children>
-      <Label layoutX="63.0" layoutY="66.0" text="Product Name" />
-      <Label layoutX="63.0" layoutY="142.0" text="Product Category" />
-      <Label layoutX="387.0" layoutY="66.0" text="Product Type" />
-      <Label layoutX="387.0" layoutY="142.0" text="Product Price" />
-      <JFXTextField fx:id="name" layoutX="174.0" layoutY="62.0" />
-      <JFXTextField fx:id="category" layoutX="174.0" layoutY="138.0" />
-      <JFXTextField fx:id="type" layoutX="491.0" layoutY="62.0" />
-      <JFXTextField fx:id="price" layoutX="491.0" layoutY="138.0" />
-      <JFXButton fx:id="AddButton" layoutX="324.0" layoutY="223.0" onAction="#AddProduct" text="Add Product" />
+      <AnchorPane fx:id="Conteneur" layoutX="66.0" layoutY="80.0">
+         <children>
+            <Label layoutY="4.0" text="Product Name" />
+            <Label layoutY="80.0" text="Product Category" />
+            <Label layoutX="324.0" layoutY="4.0" text="Product Type" />
+            <Label layoutX="324.0" layoutY="80.0" text="Product Price" />
+            <JFXTextField fx:id="name" layoutX="111.0" />
+            <JFXTextField fx:id="category" layoutX="111.0" layoutY="76.0" />
+            <JFXTextField fx:id="type" layoutX="428.0" />
+            <JFXTextField fx:id="price" layoutX="428.0" layoutY="76.0" />
+            <JFXButton fx:id="AddButton" layoutX="261.0" layoutY="161.0" onAction="#AddProduct" text="Add Product" />
+         </children>
+      </AnchorPane>
+      <Text fill="#2b579a" layoutX="78.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add A New Product" wrappingWidth="240.99999552965164">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Text>
+      <ProgressBar fx:id="ProgressLoading" layoutX="-3.0" layoutY="41.0" prefHeight="18.0" prefWidth="700.0" progress="0.0" />
+      <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="337.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/loading.GIF" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
