--- a/skiworld-Client/src/main/resources/fxml/AddRoom.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AddRoom.fxml
@@ -3,24 +3,42 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" minHeight="500.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddRoomController">
    <children>
-      <Label layoutX="103.0" layoutY="104.0" text="Simple bed :" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="130.0" />
-      <Label layoutX="102.0" layoutY="163.0" text="Double bed :" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="180.0" />
-      <Label layoutX="102.0" layoutY="296.0" text="Description :" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="280.0" />
-      <TextField fx:id="sbedTF" layoutX="237.0" layoutY="96.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="130.0" />
-      <TextField fx:id="dbedTF" layoutX="237.0" layoutY="155.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="180.0" />
-      <Button layoutX="210.0" layoutY="428.0" mnemonicParsing="false" onAction="#ajouterRoom" styleClass="btn" text="Add" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="210.0" />
-      <Label layoutX="103.0" layoutY="229.0" text="Price :" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="230.0" />
-      <Button layoutX="389.0" layoutY="428.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="btn" text="Cancel" AnchorPane.bottomAnchor="45.0" AnchorPane.rightAnchor="150.0" />
-      <TextField fx:id="priceTF" layoutX="237.0" layoutY="221.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="230.0" />
-      <TextArea fx:id="descTA" layoutX="237.0" layoutY="290.0" prefHeight="131.0" prefWidth="221.0" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="280.0" />
-      <Text layoutX="253.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add A New Room" AnchorPane.topAnchor="30.0" />
+      <AnchorPane fx:id="Conteneur" layoutX="130.0" layoutY="130.0">
+         <children>
+            <Label text="Simple bed :" />
+            <Label layoutY="50.0" text="Double bed :" />
+            <Label layoutY="150.0" text="Description :" />
+            <TextField fx:id="sbedTF" layoutX="80.0" />
+            <TextField fx:id="dbedTF" layoutX="80.0" layoutY="50.0" />
+            <Button layoutX="80.0" layoutY="298.0" mnemonicParsing="false" onAction="#ajouterRoom" styleClass="btn" text="Add" />
+            <Label layoutY="100.0" text="Price :" />
+            <Button layoutX="240.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="btn" text="Cancel" />
+            <TextField fx:id="priceTF" layoutX="80.0" layoutY="100.0" />
+            <TextArea fx:id="descTA" layoutX="80.0" layoutY="150.0" prefHeight="131.0" prefWidth="221.0" />
+         </children>
+      </AnchorPane>
+      <Text fill="#2b579a" layoutX="110.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add A New Room">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Text>
+      <ProgressBar fx:id="ProgressLoading" layoutX="10.0" layoutY="46.0" prefHeight="14.0" prefWidth="591.0" progress="0.0" />
+      <ImageView fx:id="loading" fitHeight="30.0" fitWidth="30.0" layoutX="333.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/loading.GIF" />
+         </image>
+      </ImageView>
    </children>
    <stylesheets>
       <URL value="@../styles/menu.css" />
