--- a/skiworld-Client/src/main/resources/fxml/UpdateTrack.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateTrack.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateTrackController">
+<AnchorPane prefHeight="411.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateTrackController">
    <children>
-      <AnchorPane fx:id="TableTrack" layoutX="61.0" layoutY="56.0">
+      <AnchorPane fx:id="TableTrack" layoutX="61.0" layoutY="64.0" prefHeight="322.0" prefWidth="424.0">
          <children>
             <Label fx:id="difflab" layoutX="9.0" layoutY="199.0" text="Difficulty :" />
             <Label fx:id="lengthlab" layoutX="14.0" layoutY="234.0" text="Length :" />
@@ -24,24 +24,24 @@
             <JFXButton layoutX="195.0" layoutY="303.0" onAction="#Update" styleClass="btn" text="Update" />
             <JFXTextField fx:id="length" layoutX="79.0" layoutY="228.0" />
             <JFXTextField fx:id="price" layoutX="79.0" layoutY="264.0" />
-            <Label layoutX="5.0" layoutY="4.0" text="Title :" />
+            <Label layoutX="19.0" layoutY="20.0" text="Title :" />
             <Label layoutY="40.0" text="Description :" />
-            <JFXTextArea fx:id="DescriptionTF" layoutX="79.0" layoutY="40.0" prefHeight="141.0" prefWidth="245.0" promptText="..." />
-            <JFXTextField fx:id="TitleTF" layoutX="83.0" prefHeight="28.0" prefWidth="200.0" promptText="Title" />
+            <JFXTextArea fx:id="DescriptionTF" layoutX="79.0" layoutY="49.0" prefHeight="132.0" prefWidth="245.0" promptText="..." />
+            <JFXTextField fx:id="TitleTF" layoutX="83.0" layoutY="14.0" prefHeight="28.0" prefWidth="200.0" promptText="Title" />
             <ChoiceBox fx:id="diff" layoutX="83.0" layoutY="195.0" prefHeight="25.0" prefWidth="193.0" styleClass="combo-box" />
          </children>
       </AnchorPane>
-      <Text fill="#2b579a" layoutX="36.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Training' List">
+      <Text fill="#2b579a" layoutX="20.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Training Update" wrappingWidth="199.99999552965164">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Text>
-      <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="203.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="237.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/loading.GIF" />
          </image>
       </ImageView>
-      <ProgressBar fx:id="ProgressLoading" layoutX="5.0" layoutY="32.0" prefHeight="14.0" prefWidth="490.0" progress="0.0" />
+      <ProgressBar fx:id="ProgressLoading" layoutX="5.0" layoutY="39.0" prefHeight="14.0" prefWidth="490.0" progress="0.0" />
    </children>
    <stylesheets>
       <URL value="@../styles/menu_items.css" />
