--- a/skiworld-Client/src/main/resources/fxml/Trips.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Trips.fxml
@@ -2,36 +2,55 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.TripsController">
+<AnchorPane prefHeight="500.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.TripsController">
    <children>
-      <TableView fx:id="TableTrip" layoutX="191.0" layoutY="39.0" onMouseClicked="#ClickChangeTrip" prefHeight="285.0" prefWidth="356.0">
-        <columns>
-          <TableColumn fx:id="DescriptionCol" prefWidth="75.0" text="Description" />
-          <TableColumn fx:id="PriceCol" prefWidth="75.0" text="Price" />
-            <TableColumn fx:id="PlacesCol" prefWidth="75.0" text="Places" />
-            <TableColumn fx:id="DateCol" prefWidth="130.0" text="Date" />
-        </columns>
-      </TableView>
-      <JFXButton fx:id="DeleteTripId" buttonType="RAISED" layoutX="318.0" layoutY="365.0" onAction="#DeleteTripAction" ripplerFill="#ff0505" text="Delete">
+      <AnchorPane fx:id="Conteneur" layoutX="21.0" layoutY="102.0">
+         <children>
+            <TableView fx:id="TableTrip" layoutX="177.0" layoutY="24.0" onMouseClicked="#ClickChangeTrip" prefHeight="285.0" prefWidth="356.0">
+              <columns>
+                <TableColumn fx:id="DescriptionCol" prefWidth="75.0" text="Description" />
+                <TableColumn fx:id="PriceCol" prefWidth="75.0" text="Price" />
+                  <TableColumn fx:id="PlacesCol" prefWidth="75.0" text="Places" />
+                  <TableColumn fx:id="DateCol" prefWidth="130.0" text="Date" />
+              </columns>
+            </TableView>
+            <JFXButton fx:id="DeleteTripId" buttonType="RAISED" layoutX="304.0" layoutY="350.0" onAction="#DeleteTripAction" ripplerFill="#ff0505" text="Delete">
+               <font>
+                  <Font name="Comic Sans MS Italic" size="12.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="AddTrip" buttonType="RAISED" layoutX="216.0" layoutY="350.0" onAction="#AddAction" ripplerFill="RED" text="Add">
+               <font>
+                  <Font name="Comic Sans MS Italic" size="12.0" />
+               </font>
+            </JFXButton>
+            <JFXTextField fx:id="searchId" labelFloat="true" layoutY="12.0" promptText="What I'am looking for !" />
+            <JFXButton fx:id="WatchId" buttonType="RAISED" layoutX="682.0" layoutY="12.0" onAction="#WatchAction" ripplerFill="#2a2af5" text="Watch">
+               <font>
+                  <Font name="Comic Sans MS Italic" size="12.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </AnchorPane>
+      <Text fill="#2b579a" layoutX="111.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Trips List" wrappingWidth="125.00000447034836">
          <font>
-            <Font name="Comic Sans MS Italic" size="12.0" />
+            <Font name="System Bold" size="25.0" />
          </font>
-      </JFXButton>
-      <JFXButton fx:id="AddTrip" buttonType="RAISED" layoutX="230.0" layoutY="365.0" onAction="#AddAction" ripplerFill="RED" text="Add">
-         <font>
-            <Font name="Comic Sans MS Italic" size="12.0" />
-         </font>
-      </JFXButton>
-      <JFXTextField fx:id="searchId" labelFloat="true" layoutX="14.0" layoutY="27.0" promptText="What I'am looking for !" />
-      <JFXButton fx:id="WatchId" buttonType="RAISED" layoutX="696.0" layoutY="27.0" onAction="#WatchAction" ripplerFill="#2a2af5" text="Watch">
-         <font>
-            <Font name="Comic Sans MS Italic" size="12.0" />
-         </font>
-      </JFXButton>
+      </Text>
+      <ProgressBar fx:id="ProgressLoading" layoutX="10.0" layoutY="48.0" prefHeight="14.0" prefWidth="801.0" progress="0.0" />
+      <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="250.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/loading.GIF" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
