--- a/skiworld-Client/src/main/resources/styles/menu_items.css
+++ b/skiworld-Client/src/main/resources/styles/menu_items.css
@@ -13,6 +13,15 @@
     -fx-padding: 0;
 }
 
+.checkbox {
+    -fx-border-color: lightblue; 
+    -fx-font-size: 12;
+    -fx-border-insets: -5; 
+    -fx-border-radius: 5;
+    -fx-border-style: dotted;
+    -fx-border-width: 2;
+}
+
 .table-row-cell:empty .table-cell {
     -fx-border-width: 0px;
 }
