--- a/skiworld-Client/src/main/resources/fxml/Authentication.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Authentication.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -36,6 +37,11 @@
       </Text>
       <Text fill="WHITE" layoutX="14.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Copyright © 2017 by DevSquad." AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="320.0" />
       <JFXButton buttonType="RAISED" layoutX="548.0" layoutY="2.0" onAction="#quit" style="-fx-border-color: transparent;" text="X" />
+      <Hyperlink fx:id="FPwdId" layoutX="267.0" layoutY="237.0" onAction="#ForgotPwdAction" text="Password Forgotten !">
+         <font>
+            <Font name="Comic Sans MS" size="12.0" />
+         </font>
+      </Hyperlink>
 	</children>
    <stylesheets>
       <URL value="@../styles/login.css" />
